# car_detector

./: main.py  main_test.py  plates.csv  pyproject.toml
